--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -79,8 +79,7 @@ ul {
 header {
   left: 0;
   width: 100%;
-  z-index: 2;
-  background: linear-gradient(180deg, rgba(0, 90, 173, 0.11) -74.71%, rgba(0, 0, 0, 0.11) 25.29%);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.11) 0%, rgba(235, 237, 239, 0) 100%);
 }
 
 header .container {
@@ -105,14 +104,15 @@ header .logo img {
 }
 
 header .logo p {
-  font-size: 20px;
-  font-weight: 700;
-  margin-left: 10px;
-  font-family: 'Kantumruy';
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
+  list-style: none;
   font-weight: 700;
-  font-size: 30px;
-  color: black;
+  text-decoration: none;
+  font-size: 32px;
+  color: #424242;
+  margin-bottom: 2px;
+  margin-left: 10px;
 }
 
 header nav {
