--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -349,7 +349,7 @@ header nav ul li a:hover {
 
 .user-details .input-box input:focus~label,
 .user-details .input-box input:valid~label {
-  transform: translateY(-50%) scale(0.8);
+  transform: translateY(-50%) scale(0.9);
   background-color: #f5f5f5;
   padding: 0px 0.2em;
   color: rgb(10, 10, 10);
@@ -546,6 +546,10 @@ header nav ul li a:hover {
   border: 1px solid #000;
 }
 
+.user-details4 .input-box4 input:focus {
+  outline: none;
+}
+
 .tow-aria {
   height: 115px !important;
 }
@@ -576,7 +580,7 @@ header nav ul li a:hover {
 }
 
 .list-form {
-  min-width: 70px;
+  min-width: 80px;
   padding: 5px;
   display: flex;
   align-items: center;
@@ -587,6 +591,7 @@ header nav ul li a:hover {
   margin: 6px;
   padding: 10px;
   border-radius: 7px;
+  word-break: break-word;
 }
 
 @media (max-width: 767px) {
@@ -847,8 +852,8 @@ canvas {
   overflow: hidden;
   cursor: pointer;
   transition: .5s;
-  font-weight: 400;
-  font-size: 17px;
+  font-weight: 700;
+  font-size: 19px;
   border: 1px solid;
   font-family: inherit;
   text-transform: uppercase;
