--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -492,6 +492,7 @@ header nav ul li a:hover {
   box-shadow: 0px 2px 4px rgb(0 0 0 / 25%);
 }
 
+
 .user-details3 {
   display: flex;
   justify-content: space-between;
@@ -904,4 +905,9 @@ canvas {
 
 .button:active {
   filter: brightness(.8);
+}
+.dir {
+  position: relative;
+  top: -50px;
+    left: -95%;
 }
