--- a/CSS/choose_template.css
+++ b/CSS/choose_template.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic&family=Roboto:wght@100&display=swap');
 
 * {
+   padding: 0;
+   margin: 0;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
-   padding: 0;
-   margin: 0;
    -webkit-user-drag: none;
    -khtml-user-drag: none;
    -moz-user-drag: none;
@@ -429,6 +429,7 @@ ul {
 .templateBox img {
    width: 100%;
    height: 220px;
+   border-radius: 4px;
 }
 
 .chooseT {
@@ -441,7 +442,7 @@ ul {
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
    border-radius: 15px;
    margin: auto;
-   margin-top: 30px;
+   margin-top: 20px;
 }
 
 .chooseT:hover {
@@ -470,7 +471,7 @@ ul {
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
    border-radius: 15px;
    margin: auto;
-   margin-top: 20px;
+   margin-top: 13px;
 }
 
 .showT:hover {
