--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -252,10 +252,15 @@ header nav ul li a:hover {
   transform: translateX(-50%);
   cursor: pointer;
   border: 1px solid;
-  border-radius: 50%;
-  padding: 15px;
-  height: 75px;
+  border-radius: 5px;
+  height: 100px;
+  width: 100px;
+  background-size: cover;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.imageCV:hover {
+  opacity: 0.7;
 }
 
 .user-label {
@@ -906,8 +911,9 @@ canvas {
 .button:active {
   filter: brightness(.8);
 }
+
 .dir {
   position: relative;
   top: -50px;
-    left: -95%;
+  left: -95%;
 }
