--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -349,7 +349,7 @@ header nav ul li a:hover {
   background: none;
   padding: 1rem;
   font-size: 1rem;
-  color: rgb(176 159 159);
+  color: #3b3b3b;
   transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -783,12 +783,20 @@ header nav ul li a:hover {
   cursor: pointer;
 }
 
+.fa-minus:hover {
+  background: #ff885c !important;
+}
+
 .inc {
   padding: 5px !important;
   border: 1px solid !important;
   border-radius: 50% !important;
   background: #c9ffed;
   cursor: pointer;
+}
+
+.inc:hover {
+  background: #51fac2;
 }
 
 
