--- a/CSS/Admin.css
+++ b/CSS/Admin.css
@@ -370,3 +370,107 @@ margin-bottom: 20px;
     margin-bottom: 20px;
   }
 }
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+  text-align: center;
+}
+tr:nth-child(odd) {
+  text-align: center;
+}
+.landing-info3 {
+  padding-top: 30px;
+    padding-bottom: 30px;
+}
+.landing-content3 {
+  display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+}
+.square3-hight {
+  width: 890px;
+  border: 1px solid #000000;
+    filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.25));
+    border-radius: 13px;
+}
+.info1 {
+  text-align: end;
+  font-family: 'Noto Sans Arabic';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 13px;
+    padding-right: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.footer {
+  background-color: #EBEBEB;
+  padding-top: 50px;
+  padding-bottom: 20px;
+  margin-top: 60px;
+}
+
+.footer .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 30px;
+  text-align: center;
+}
+
+.footer .container .box-footer h3 {
+  color: #000000;
+  margin-bottom: 40px;
+  position: relative;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 24px;
+  text-align: center;
+}
+
+.footer .container .box-footer h3::after {
+  content: '';
+  position: absolute;
+  width: 60%;
+  height: 2px;
+  background-color: #000000;
+  bottom: -20px;
+  left: 19%;
+}
+
+.footer .container .box-footer p {
+  font-family: 'Noto Sans Arabic';
+  color: #000000;
+  font-style: normal;
+  font-weight: 670;
+  font-size: 16px;
+  line-height: 32px;
+  text-align: center;
+  letter-spacing: 0.025em;
+}
+
+.icons-footer img {
+  width: 25px;
+  height: 25px;
+  margin: 5px;
+}
+
+@media (max-width: 992px) and (min-width: 768px) {
+  .footer .container {
+     display: grid;
+     grid-template-columns: repeat(auto-fit, minmax(86px, 1fr));
+     grid-gap: 37px;
+     text-align: center;
+  }
+}
+
+
