--- a/CSS/Admin.css
+++ b/CSS/Admin.css
@@ -517,10 +517,12 @@ tr:nth-child(even) {
     text-align: center;
   }
 }
+
 .scroll-ul {
   overflow-y: auto;
   height: 90%;
 }
+
 .scroll2-ul {
   overflow-y: auto;
   height: 86%;
@@ -530,14 +532,17 @@ tr:nth-child(even) {
   overflow-y: auto;
   height: 300px;
 }
+
 .tableFixHead th {
   position: sticky;
   top: 0;
 }
+
 table {
   border-collapse: collapse;
   width: 100%;
 }
+
 th {
   background: #eee;
 }
@@ -652,6 +657,7 @@ th {
   .navBar_box {
     height: 80px;
   }
+
   .square3-hight {
     width: 340px;
   }
@@ -686,50 +692,59 @@ th {
     display: block;
   }
 }
+
 .comp-lab {
   margin-top: 20px;
-    margin-bottom: 20px;
-    display: flex;
-    padding: 10px;
-    border: solid 1.5px #9e9e9e;
-    border-radius: 0.5rem;
-    background: none;
-    font-size: 1rem;
-    color: rgb(176 159 159);
-    transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 20px;
+  display: flex;
+  padding: 10px;
+  border: solid 1.5px #9e9e9e;
+  border-radius: 0.5rem;
+  background: none;
+  font-size: 1rem;
+  color: rgb(176 159 159);
+  transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .comp-lab p {
   margin-left: 25px;
 }
+
 .comp-lab i {
   margin-left: 10px;
 }
+
 .comp-lab2 {
   margin-top: 20px;
-    display: flex;
-    padding: 10px;
-    border: solid 1.5px #9e9e9e;
-    border-radius: 0.5rem;
-    background: none;
-    font-size: 1rem;
-    color: rgb(176 159 159);
-    transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  padding: 10px;
+  border: solid 1.5px #9e9e9e;
+  border-radius: 0.5rem;
+  background: none;
+  font-size: 1rem;
+  color: rgb(176 159 159);
+  transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .comp-lab2 p {
   margin-left: 23px;
 }
+
 .comp-lab2 i {
   margin-left: 7px;
 }
+
 .tableFixHead1 {
   overflow-y: auto;
+  height: 300px;
 }
-.tableFixHead1 th {
-  position: sticky;
-  top: 0;
-}
+
 .tableFixHead1 th {
   position: sticky;
   top: 0;
 }
 
+.tableFixHead1 th {
+  position: sticky;
+  top: 0;
+}
